[package]
name = "warc_reader"
version = "0.1.0"
authors = ["jordanpiepkow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { git = "https://github.com/jpiepkow/reqwest", features = ["gzip"] }
rust_warc = { git = "https://github.com/jpiepkow/rust-warc"}